crux-mir-comp/test/symb_eval/comp/spec_mut_slice.good
test spec_mut_slice/<DISAMB>::f_test[0]: ok
test spec_mut_slice/<DISAMB>::use_f[0]: FAILED

failures:

---- spec_mut_slice/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/comp/spec_mut_slice.rs:48:5: 48:29: error: in spec_mut_slice/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/spec_mut_slice.rs:48:5:
[Crux]   	d < 10

[Crux] Overall status: Invalid.
